--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   font-style: normal;
   font-weight: 400;
   src: url("fonts/LeagueSpartan-Regular.woff2") format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   font-style: normal;
   font-weight: 700;
   src: url("fonts/LeagueSpartan-Bold.woff2") format("woff2");
+  font-display: swap;
 }
 
 :root {
