--- a/style.css
+++ b/style.css
@@ -47,16 +47,19 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 40px var(--gutters);
+  padding: 40px var(--gutters) 60px;
   text-align: center;
+  container-type: inline-size;
 }
 
 .punch {
-  margin-bottom: 30px;
+  margin-bottom: var(--gutters);
+  max-width: clamp(0px, 185px, 33vw);
+  height: auto;
 }
 
 .eyebrow {
-  max-width: 40vw;
+  max-width: clamp(225px, 40vw, 40vw);
 }
 
 .title {
@@ -85,10 +88,26 @@ body {
   vertical-align: middle;
 }
 
+@container (max-width: 500px) {
+  .subtitle {
+    font-size: 20px;
+  }
+  .subtitle__star {
+    margin: 0 5px 3px;
+  }
+}
+
+@container (max-width: 350px) {
+  .subtitle {
+    font-size: 18px;
+  }
+}
+
 main {
   display: flex;
   justify-content: center;
   padding: 0 var(--gutters);
+  container-type: inline-size;
 }
 
 .posters {
@@ -98,14 +117,24 @@ main {
   gap: clamp(10px, 7vw, var(--max-gap)) clamp(10px, 7vw, var(--max-gap));
   width: 100%;
   max-width: 860px;
-  margin-top: 40px;
+}
+
+@container (max-width: 600px) {
+  .posters {
+    grid-template-columns: 1fr;
+  }
+
+  .poster__links {
+    position: relative;
+    opacity: 1;
+  }
 }
 
 .poster {
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   margin: 0;
   padding: 0;
@@ -119,18 +148,29 @@ main {
 }
 
 .poster__links {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  width: calc(100% - 40px);
   padding: 20px;
-  background-color: var(--color-bg);
-  opacity: 0;
-  transform: scale(0.98) translateY(5px);
-  transition: all ease 0.2s;
+  background-color: #fff;
+}
+
+@media (hover: hover) {
+  .poster__links {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    width: calc(100% - 40px);
+    opacity: 0;
+    transform: scale(0.98) translateY(5px);
+    transition: all ease 0.2s;
+    background-color: var(--color-bg);
+  }
+
+  .poster__link:hover {
+    background-color: var(--color-text);
+    color: #fff;
+  }
 }
 
 .poster:hover .poster__links,
@@ -150,11 +190,6 @@ main {
   color: #000;
   text-decoration: none;
   line-height: 1;
-}
-
-.poster__link:hover {
-  background-color: var(--color-text);
-  color: #fff;
 }
 
 .footer {
