--- a/style.css
+++ b/style.css
@@ -79,6 +79,14 @@ body {
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
+
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
 }
 
 .subtitle__star {
