--- a/style.css
+++ b/style.css
@@ -79,14 +79,15 @@ body {
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
+}
 
-  a {
-    text-decoration: none;
-    color: #000;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
+.subtitle a {
+  text-decoration: none;
+  color: #000;
+}
+
+.subtitle a:hover {
+  text-decoration: underline;
 }
 
 .subtitle__star {
@@ -148,12 +149,12 @@ main {
   padding: 0;
   min-width: 0px;
   aspect-ratio: 410 / 545;
+}
 
-  img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
+.poster img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .poster__links {
